somewhat fixed this still isnt perfect; when you spin the card a full 360 the motive shows during the animation since the rotaion animates from 0 to 360 but the z-index just animates from 1 to 1 so the motive is visible on the 'back' side during this case. but ist so fast taht id say its alright for now

--- a/src/main/resources/static/front/style.css
+++ b/src/main/resources/static/front/style.css
@@ -233,6 +233,7 @@ body {
   box-shadow: 0 0 4px;
   display: inline-block;
   position: relative;
+  transition: transform .5s, z-index .5s;
 }
 
 .page {
@@ -257,7 +258,7 @@ body {
   left: 0;
   transform: translateZ(-1px);
 }
-.page.front>.motive-layer {
+.page.front>*:not(.folds-layer) {
   transform: rotateY(-180deg);
 }
 
